--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SensoMotion</title>
+    <link rel="icon" href="images/sensomotion-logo.jpg" type="image/x-icon"> 
     <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
