--- a/members.html
+++ b/members.html
@@ -43,7 +43,7 @@
         <img src="images/guy.jpeg" alt="Guy BOUVIER" class="image">
         <div>
             <div class="name">Guy BOUVIER</div>
-            <div class="status">PRINCIPAL INVESTIGATOR</div>
+            <div class="status_PI">PRINCIPAL INVESTIGATOR</div>
             <div class="description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, justo id viverra rutrum, dui quam fringilla ante, at ultricies eros purus a ex. Nunc sed faucibus mi. Proin eu massa ac eros ullamcorper faucibus at at purus. Donec vitae rutrum erat, id faucibus lorem. Praesent auctor vestibulum tortor, vitae efficitur lectus commodo non. Integer in lectus at enim hendrerit scelerisque. Vivamus tincidunt imperdiet sem, nec rhoncus magna efficitur ac. Nulla vitae pharetra lorem, posuere gravida velit. Aenean rutrum tortor sit amet nulla aliquam, id fringilla dui fermentum. Vivamus imperdiet lacus eu vulputate ullamcorper. Cras sed sagittis quam. Mauris elementum nisi ut nisl viverra dapibus. Aenean commodo sem tincidunt tortor auctor facilisis.    
             </div>
