--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<title>SensoMotion Lab</title>
 	<link rel="icon" href="images/sensomotion-logo.ico" type="image/x-icon">
-	<!-- <meta http-equiv="X-UA-Compatible"
+	<meta http-equiv="X-UA-Compatible"
 	content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<link rel="stylesheet" href="style.css">
@@ -27,11 +27,11 @@
 	<nav class="navbar">
 		<div class="nav-links">
 			<ul>
-				<li class="active"><a href="index.html">About</a></li>
+				<li><a href="index.html">About</a></li>
 				<li><a href="members.html">Members</a></li>
 				<li><a href="projects.html">Projects</a></li>
 				<li><a href="publications.html">Publications</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li class="active"><a href="contact.html">Contact</a></li>
 				<!-- <div class="menu-icon">
 					<img src="images/banniere.jpg" alt="Menu Hamburger" class="menu-hamburger">
 				</div> -->
@@ -46,7 +46,6 @@
 	</div>
 	
 
-	
 	<div class="summary">
         <h2>Résumé</h2>
         <p>Comment nos mouvements influencent-ils la manière dont nous percevons le monde ?</p>
