--- a/members.html
+++ b/members.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<title>SensoMotion Lab</title>
 	<link rel="icon" href="images/sensomotion-logo.ico" type="image/x-icon">
-	<!-- <meta http-equiv="X-UA-Compatible"
+	<meta http-equiv="X-UA-Compatible"
 	content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
